--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
@@ -13,8 +13,27 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin: 0 15px;
+    margin: 5px 15px;
+    line-height: 50px;
     font-family: Segoe UI Light, Calibri Light, Sans-Serif;
+}
+
+li {
+    padding: 10px 15px;
+    list-style-type: square;
+}
+
+hr {
+    color: #929ab1;
+    border: none;
+    border-bottom: 1px solid;
+}
+
+legend {
+    margin: 0;
+    padding: 0 15px;
+    font-family: Segoe UI Light, Calibri Light, Sans-Serif;
+    border-bottom: 1px solid #929ab1;
 }
 
 input, button {
@@ -22,7 +41,7 @@ input, button {
 }
 
 .form-control {
-    border: 1px solid #aaaaaa;
+    border: 1px solid #929ab1;
     border-radius: 0;
     box-shadow: none;
 }
@@ -36,14 +55,14 @@ input, button {
 }
 
 input[type='submit'], .fancy-button {
-    margin: 0 15px;
-    padding: 5px 15px;
+    margin: 5px 15px;
+    padding: 5px 10px;
     display: inline-block;
     border: 2px solid;
     border-radius: 0;
     color: #083a7c;
     background-color: transparent;
-    font-size: 1.2em;
+    font-size: 18px;
     cursor: pointer;
     transition: 0.1s;
 }
@@ -67,13 +86,8 @@ input[type='submit']:hover, .fancy-button:hover {
 .form-box {
     margin: 0 15px;
     padding: 20px;
-    border: 1px solid #aaaaaa;
+    border: 1px solid #929ab1;
     background-color: #eef2f6;
-}
-
-.form-box hr {
-    border: none;
-    border-bottom: 1px solid #aaaaaa;
 }
 
 .single-action {
@@ -100,7 +114,7 @@ input[type='submit']:hover, .fancy-button:hover {
 }
 
 .crud-list .valide:hover td {
-    background-color: #eef2f6;
+    background-color: #f2f4f7;
 }
 
 .crud-list button {
@@ -119,10 +133,14 @@ input[type='submit']:hover, .fancy-button:hover {
 }
 
 .crud-list .valide .action-cell {
-    background-color: #eef2f6;
+    background-color: #f2f4f7;
 }
 
 .crud-list .action-cell-header {
     padding: 10px 5px;
     text-align: center;
+}
+
+.champ {
+    margin: 20px 15px;
 }
