--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
@@ -6,13 +6,13 @@
     <h1>Bienvenue!</h1>
     <div class="icon-container">
 
-        @if (User.IsInRole("RCP"))
-        {
+        @*@if (User.IsInRole("RCP"))
+        {*@
             <a class="icon" href='@Url.Action("Index", "Programme")'>
                 <span class="glyphicon glyphicon-education"></span>
                 <p>Gestion des programmes</p>
             </a>
-        }
+        @*}*@
         @if (User.IsInRole("Enseignant")||User.IsInRole("Gestionnaire de stage"))
         {
             <a class="icon" href='@Url.Action("indexStage", "Stage")'>
