finalisation des routes pour le treeview

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
@@ -10,10 +10,10 @@
     <div id="info-display" class="container-fluid">
         <div id="info-header">
             <h3>Élément de compétence</h3>
-            <div>
+            @*<div>
                 <h1>@Html.DisplayFor(model => model.element)</h1>
-                <div class="fancy-button edit" onclick="location.href='@Url.Action("Edit", "ElementCompetence")'"><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</div>
-            </div>
+                <div class="fancy-button edit" onclick="location.href='@Url.Action("Edit", "ElementCompetence")'"><span class="glyphicon glyphicon-pencil"></span> Modifier</div>
+            </div>*@
         </div>
 
         <div id="info-detail">
