--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/_TreeView.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/_TreeView.cshtml
@@ -12,7 +12,7 @@
                 <div class="collapse-button" data-toggle="collapse" data-target=@p_target><span class="glyphicon glyphicon-chevron-right"><!----></span></div> }
             else {
                 <div class="no-button"><!----></div> }
-            <a href='@Url.Action("Info", "Programme", new { id = programme.idProgramme })'>@Html.DisplayFor(p => programme.nom)</a>
+            <a href='@Url.RouteUrl("Info-programme", new { id = programme.idProgramme })'>@Html.DisplayFor(p => programme.nom)</a>
         </div>
         <div id=@p_id class="collapse">
             <div class="tree-view-item-container">
@@ -27,7 +27,7 @@
                             <div class="collapse-button" data-toggle="collapse" data-target=@enc_target><span class="glyphicon glyphicon-chevron-right"><!----></span></div> }
                         else { 
                             <div class="no-button"><!----></div> }
-                        <a href='@Url.Action("Info", "EnonceCompetence", new { id = enonceCompetence.idCompetence })'>@Html.DisplayFor(enc => enonceCompetence.enonceCompetence1)</a>
+                        <a href='@Url.RouteUrl("Info-enonceCompetence", new { id = enonceCompetence.idCompetence })'>@Html.DisplayFor(enc => enonceCompetence.enonceCompetence1)</a>
                     </div>
                     <div id=@enc_id class="collapse">
                         <div class="tree-view-item-container">
@@ -37,7 +37,7 @@
                                 string el_item = "el" + elementCompetence.idElement.ToString() + "item";
                                 <div id=@el_item class="tree-view-item">
                                     <div class="no-button"><!----></div>
-                                    <a href='@Url.Action("Info", "ElementCompetence", new { id = elementCompetence.idElement })'>@Html.DisplayFor(elc => elementCompetence.element)</a>
+                                    <a href='@Url.RouteUrl("Info-elementComp", new { id = elementCompetence.idElement })'>@Html.DisplayFor(elc => elementCompetence.element)</a>
                                 </div>
                             }
                         </div>
