--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetences/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetences/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ApplicationPlanCadre.Models.EnonceCompetence
 
 @{
-    ViewBag.Title = "CreateCompetence";
+    ViewBag.Title = "Create";
 }
 
 <h2>Création d'une compétence</h2>
@@ -22,7 +22,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.codeCompetence, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.codeCompetence, new { htmlAttributes = new { @class = "form-control small-input" } })
+                            @Html.EditorFor(model => model.codeCompetence, new { htmlAttributes = new { @class = "form-control small-input", @Value = "" } })
                             @Html.ValidationMessageFor(model => model.codeCompetence, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.enonceCompetence1, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.enonceCompetence1, new { htmlAttributes = new { @class = "form-control small-input" } })
+                            @Html.EditorFor(model => model.enonceCompetence1, new { htmlAttributes = new { @class = "form-control small-input", @Value = "" } })
                             @Html.ValidationMessageFor(model => model.enonceCompetence1, "", new { @class = "text-danger" })
                         </div>
                     </div>
