Accueil Portail / Accueil Gestion des programmes

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <header>
             <div class="fluid-container">
                 <div id="layout-head" class="clearfix">
-                    <button type="button" id="nav-button" data-toggle="collapse" data-target="#nav"><span class="glyphicon glyphicon-th"></span></button>
+                    <button type="button" id="nav-button" data-toggle="collapse" data-target="#nav"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
                     <a href='@Url.Action("Index", "Accueil")'><div class="header-logo"><!----></div></a>
                     @Html.Partial("_LoginPartial")
                 </div>
@@ -26,14 +26,16 @@
                     <span class="glyphicon glyphicon-home"></span>
                     <p>Accueil</p>
                 </a>
-                @if (User.IsInRole("RCP"))
+                @if (User.IsInRole("RCP") || User.IsInRole("Gestionnaire de stage") || User.IsInRole("Admin") || User.IsInRole("Enseignant"))
                 {
-                    <a class="tuile"  href='@Url.RouteUrl("Index-programme")'>
+                    <a class="tuile" href='@Url.RouteUrl("Accueil-pedagogie")'>
                         <span class="glyphicon glyphicon-education"></span>
-                        <p>Gestion des programmes</p>
+                        <p>Pédagogie</p>
                     </a>
                 }
-                @if (User.IsInRole("Enseignant") || User.IsInRole("Gestionnaire de stage"))
+
+        
+                @if (User.IsInRole("Enseignant")||User.IsInRole("Gestionnaire de stage"))
                 {
                     <a class="tuile" href='@Url.RouteUrl("index-Stage")'>
                         <span class="glyphicon glyphicon-briefcase"></span>
@@ -47,6 +49,7 @@
                         <p>Console d'administration</p>
                     </a>
                 }
+
                 </div>
             </nav>
         </header>
