Bouton upload, style edit et début du formulaire ContexteRealisation

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
@@ -1,8 +1,4 @@
-﻿body {
-    font-family: Segoe UI, Calibri, Sans-Serif;
-}
-
-#portail #image {
+﻿#portail #image {
     min-height: 100vh;
     background-image: url(Images/cegep.jpg);
     background-position: center center;
