--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
@@ -12,7 +12,7 @@
             <h3>Élément de compétence</h3>
             <div>
                 <h1>@Html.DisplayFor(model => model.element)</h1>
-                <div class="fancy-button edit" onclick="location.href='@Url.Action("Edit", "ElementCompetence")'"><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</div>
+                @*<div class="fancy-button edit" onclick="location.href='@Url.Action("Edit", "ElementCompetence")'"><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</div>*@
             </div>
         </div>
 
