push des modification apporter au contexte de réalisation et de l'edit des enouncés compétence.

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetences/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetences/Create.cshtml
@@ -38,7 +38,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.obligatoire, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.CheckBoxFor(model => model.obligatoire)
+                            @Html.CheckBoxFor(model => model.obligatoire, new { @Checked = "checked"})
                             @Html.ValidationMessageFor(model => model.obligatoire, "", new { @class = "text-danger" })
                         </div>
                     </div>
