--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Details.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Details.cshtml
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div>
-        <div class="fancy-button cancel" onclick="location.href='@Url.Action("CreateCompetence", "EnonceCompetences", new { id =Model.idProgramme})'">Ajouter une compétence</div>
+        <div class="fancy-button cancel" onclick="location.href='@Url.Action("Create", "EnonceCompetences", new { id =Model.idProgramme})'">Ajouter une compétence</div>
     </div>
 
     <div class="row">
