--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetences/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetences/Edit.cshtml
@@ -10,6 +10,7 @@
     <div class="col-md-6">
         <div class="form-box">
 
+            @*@using (Ajax.BeginForm("_partialCreateContexte", "EnonceCompetences", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "lstContexte" }))*@
             @using (Html.BeginForm(FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
@@ -51,11 +52,7 @@
                         </div>
                     </div>
 
-                        @Html.Action("_partialCreateContexte", new { id = Model.idCompetence})
-
-                    <div id="lstContexte" class="lstContexte">
-                        @Html.Partial("_partialContexte", Model.ContexteRealisation)
-                    </div>
+                    @{Html.RenderAction("_partialCreateContexte", new { id = Model.idCompetence });}                    
 
                     <div class="col-md-offset-3">
                         <input type="submit" value="Enregistrer" />
