--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
@@ -355,3 +355,27 @@
 #console-programme {
     margin-top: 100px;
 }
+.stylish-input-group .input-group-addon {
+    background: white !important;
+}
+
+.stylish-input-group .form-control {
+    border-right: 0;
+    box-shadow: 0 0 0;
+    border-color: #ccc;
+}
+
+.stylish-input-group button {
+    border: 0;
+    background: transparent;
+}
+
+span.markBlue {
+    background: blue;
+    color: white;
+}
+mark {
+    background: orange;
+    color: inherit;
+    padding: 0;
+}
