--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div id="submit" class="form-group">
-                            <input type="submit" value="Connexion" />
+                            <input type="submit" value="Connexion" class="fancy-button"/>
                         </div>
                         <p id="forgot-password">
                             @Html.ActionLink("Vous avez oublié votre mot de passe ?", "ForgotPassword")
