--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Create.cshtml
@@ -6,18 +6,20 @@
 
 <div id="console-programme" class="container">
     <div class="col-md-6">
-        <div class="form-box">
-
-            <h3>Ajouter un programme</h3>
-            <hr />
 
             @using (Html.BeginForm("Create", "ConsoleProgramme", FormMethod.Post)) 
             {
                 @Html.AntiForgeryToken()
 
-                <div class="form-horizontal">
-                    <p class="text-danger">@ViewBag.messageError</p>
+                <div class="form-horizontal form-box">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                    <h3>Ajouter un programme</h3>
+                    <hr />
+                    <div class="champ">
+                        @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
+                    </div>
+
                     <div class="form-group">
                         @Html.LabelFor(model => model.EnteteProgramme, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
@@ -43,26 +45,14 @@
                     </div>
 
                     <div class="form-group">
-                        <div class="col-md-offset-3">
-                            <input type="submit" value="Enregistrer" />
+                        <div class="col-md-offset-3 col-md-9">
+                            <input type="submit" value="Enregistrer" class="fancy-button" />
                         </div>
                     </div>
                 </div>
             }
-        </div>
     </div>
     <div class="col-md-6">
         @Html.Action("_PartialList")
     </div>
-
-    @*<script src="../../Scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
-        <script type="text/javascript">
-            $(function () {
-                $('#pass2').click(function () {
-                    $.get('@Url.Action("_PartialView", "Programme")', function (data) {
-                        $('#tableProgramme').replaceWith(data);
-                    });
-                });
-            });
-        </script>*@
 </div>
