--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Edit.cshtml
@@ -10,14 +10,13 @@
     {
         @Html.AntiForgeryToken()
 
-        
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.idProgramme)
-            @Html.HiddenFor(model => model.codeProgramme)
-            @Html.HiddenFor(model => model.annee)
-            @Html.HiddenFor(model => model.codeSpecialisation)
-            @Html.HiddenFor(model => model.dateValidation)
-            @Html.HiddenFor(model => model.docMinistere_path)
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.idProgramme)
+        @Html.HiddenFor(model => model.codeProgramme)
+        @Html.HiddenFor(model => model.annee)
+        @Html.HiddenFor(model => model.codeSpecialisation)
+        @Html.HiddenFor(model => model.dateValidation)
+        @Html.HiddenFor(model => model.docMinistere_path)
 
         <div class="form-horizontal form-box single-action">
             <h1>Modifier un programme</h1>
@@ -25,6 +24,7 @@
                 @Html.DisplayFor(model => model.EnteteProgramme.commentaire)
                 @Html.DisplayFor(model => model.codeProgramme)-@Html.DisplayFor(model => model.annee)-@Html.DisplayFor(model => model.codeSpecialisation)
             </h3>
+            
             <hr />
             <div class="row">
                 <div class="col-md-6">
@@ -74,16 +74,23 @@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.docMinistere_path, new { @class = "col-xs-4 control-label" })
-                        <input type="file" id="pdf" name="docMinistere_path" class="inputfile" accept="application/pdf"/>
-                        <label for="pdf" class="file-button fancy-button rouge">
-                            <span class="upload glyphicon glyphicon-download-alt"><!----></span>
-                            @if (Model.docMinistere_path == null) {
-                                <span class="filename">Téléverser un PDF</span>
-                            }
-                            else {
-                                <span class="filename">@Html.DisplayFor(model => model.docMinistere_path)</span>
-                            }
-                        </label>
+                        <div class="col-xs-8">
+                            <input type="file" id="pdf" name="docMinistere_path" class="inputfile" accept="application/pdf" />
+                            <label for="pdf" class="file-button fancy-button rouge">
+                                <span class="upload glyphicon glyphicon-download-alt"><!----></span>
+                                @if (Model.docMinistere_path == null)
+                                {
+                                    <span class="filename">Téléverser un PDF</span>
+                                }
+                                else
+                                {
+                                    <span class="filename">@Html.DisplayFor(model => model.docMinistere_path)</span>
+                                }
+                            </label>
+                            <p>
+                                @Html.ValidationMessage("PDF", new { @class = "text-danger" })
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -109,9 +116,9 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="col-xs-offset-4">
-                        <input type="submit" value="Enregistrer" />
-                        <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "Programme", new { id = Model.idProgramme })'">Retour</div>
+                    <div class="col-xs-offset-4 col-xs-8">
+                        <input type="submit" value="Enregistrer" class="fancy-button" />
+                        <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "Programme", new { idProgramme = Model.idProgramme })'">Annuler</div>
                     </div>
                 </div>
             </div>
